[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hibiki-core"
version = "2.0.0"
description = "A complete logging solution with console, database, and Discord notification support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Matt"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "aiohttp>=3.8.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/mateeyas/hibiki-core"
Documentation = "https://github.com/mateeyas/hibiki-core#readme"
Repository = "https://github.com/mateeyas/hibiki-core"
Issues = "https://github.com/mateeyas/hibiki-core/issues"
